# tembedded

./: .gitignore  Cargo.toml  README.md  partitions.csv  sdkconfig.defaults
.cargo/: config.toml
assets/: manage.html
scripts/: azure_setup.sh  release.sh
src/: birthdays.rs  cal.rs  fasting.rs  fortune.rs  game.rs  home.rs  image.rs  main.rs  ota.rs  plugins.rs  quotes.rs  webconfig.rs  wifi.rs  wifi_creds.rs  worldcup.rs
